[package]
name = "custom_debug_derive"
version = "0.1.5"
authors = ["panicbit <panicbit.dev@gmail.com>"]
description = "Derive Debug with a custom format per field"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/panicbit/custom_debug_derive"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
synstructure = "0.10.1"
proc-macro2 = "0.4.30"
syn = "0.15.34"
