[package]
name = "custom_debug_derive"
version = "0.5.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
description = "Derive Debug with a custom format per field"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/panicbit/custom_debug"
readme = "../README.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
synstructure = "0.12.3"
proc-macro2 = "1.0.6"
syn = "1.0.11"
