[package]
name = "custom_debug_derive"
version = "0.5.1"
authors = ["panicbit <panicbit.dev@gmail.com>"]
description = "Derive Debug with a custom format per field"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/panicbit/custom_debug"
readme = "../README.md"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
synstructure = "0.13.0"
proc-macro2 = "1.0.76"
syn = "2.0.48"
quote = "1.0.35"
itertools = "0.12.0"
darling = "0.20.3"
